Загрузил новые шрифты в папку "public" и подключил

--- a/src/TodoItem.module.css
+++ b/src/TodoItem.module.css
@@ -5,9 +5,9 @@
     padding: 30px 20px 0;
     width: 70%;
     border-bottom: 1px solid #cecece;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 100;
     font-size: 15px;
+    font-family: "Lora";
     color: #333333;
   }
 
