--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,7 +16,7 @@
   }
 
   .tod {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Lora";
   }
 
   .den {
@@ -24,5 +24,4 @@
     font-size: 12px;
     color:dimgrey;
     display: inline;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
